<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:padding="15dp"
    tools:context="FirstApp.PrimeraAppActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backInicio"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/baseline_density"
        android:backgroundTint="@color/primario"
        android:paddingStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_button_desc" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sniglet"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/titulotips"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/texto1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/textotips1"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/titulo"
      />

    <androidx.cardview.widget.CardView
        android:id="@+id/machoView"
        android:layout_width="124dp"
        android:layout_height="116dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/texto1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/femaleView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/pet"
                android:contentDescription="@string/macho_image_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/genero_machotips"
                android:textAllCaps="true"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/femaleView"
        android:layout_width="124dp"
        android:layout_height="116dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/texto1"
        app:layout_constraintStart_toEndOf="@id/machoView"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/cat1"
                android:contentDescription="@string/female_image_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/genero_hembratips"
                android:textAllCaps="true"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/secondtextinput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/machoView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <AutoCompleteTextView
            android:id="@+id/second_auto_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/items_labels"
            android:inputType="text"
            android:contentDescription="@string/autocomplete_desc"
            tools:ignore="ContentDescription" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/boton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="#6395EC"
        android:fontFamily="@font/sniglet"
        android:text="@string/enviar"
        app:layout_constraintTop_toBottomOf="@id/secondtextinput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="#9FBDF3"
        android:fontFamily="@font/sniglet"
        android:text="@string/cancelar"
        app:layout_constraintTop_toBottomOf="@id/secondtextinput"
        app:layout_constraintStart_toEndOf="@id/boton"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>